--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobilnasauna",
   "homepage": "https://mobilnesaunowanie.pl",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
@@ -18,7 +18,7 @@
     "react-image-gallery": "^1.0.9",
     "react-media": "^1.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.1",
     "web-vitals": "^1.1.0"
   },
